# disk-cleaner

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DiskCleaner-0.2.0-fda-ux.dmg  README.md  TODOS.md
.github/workflows/: ci.yml  release.yml  screenshots.yml
benches/: README.md  ab.sh  arena_bench.rs  baseline.sh  bench_perf.rs  coldcache.ps1  coldscan.sh  dir_hidden_bench.rs  fullscan.sh  regression_bench.rs  scan_bench.rs  stat_bench.rs  tree_bench.rs  tree_memory.rs  tree_ops.rs  treemap_bench.rs  view_bench.rs  vs_all.sh  vs_dust.sh
docs/: DESIGN.md  IDEA.md  UI_AUDIT.md  index.html
docs/screenshots/: app_home-1280.avif  app_tree-1280.avif  app_tree_full-1280.avif  app_treemap-1280.avif
docs/superpowers/plans/: 2026-03-25-treemap-performance.md
docs/superpowers/specs/: 2026-03-25-treemap-performance-design.md
paperclip/: execution
paperclip/agents/ceo/memory/: 2026-03-16.md  2026-03-17.md  2026-03-18.md  MEMORY.md  feedback_assignment_gap.md  feedback_delegate_first.md  project_company_state.md
paperclip/agents/codex-researcher/: AGENTS.md
paperclip/agents/founding-engineer/: AGENTS.md
paperclip/agents/performance-reviewer/: AGENTS.md
scripts/: bench_compare.sh  coverage.sh  create_demo_data.sh  pgo-build.sh
src/: app_icon.rs  arena_scanner.rs  categories.rs  deleter.rs  icons.rs  intern.rs  lib.rs  main.rs  permissions.rs  scanner.rs  suggestions.rs  suggestions_ui.rs  tree.rs  treemap.rs  ui.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/scanner/: macos.rs  mod.rs  windows.rs  windows_ntfs.rs
tests/: e2e.rs
