[package]
name = "disk-cleaner"
version = "0.1.0"
edition = "2021"
default-run = "disk-cleaner"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
bytesize = "2"
trash = "5"
rfd = "0.17"
dirs = "6"
serde_json = "1"
libc = "0.2"
rayon = "1.11.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep", "NSImageRep", "NSGraphicsContext"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
dirs = "6"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "tree_memory"
harness = false

[[bench]]
name = "tree_ops"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
