[package]
name = "disk-cleaner"
version = "0.3.0"
edition = "2024"
default-run = "disk-cleaner"

[features]
default = []
internal-tools = []

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
bytesize = "2"
trash = "5"
rfd = "0.17"
dirs = "6"
serde_json = "1"
libc = "0.2"
rayon = "1.11.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep", "NSImageRep", "NSGraphicsContext"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
dirs = "6"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "tree_bench"
harness = false

[[bench]]
name = "treemap_bench"
harness = false

[[bench]]
name = "regression_bench"
harness = false

[[bench]]
name = "stat_bench"
harness = false

[profile.bench]
inherits = "release-dist"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"

[profile.release-dist]
inherits = "release"
lto = true

[[bin]]
name = "disk-cleaner"
path = "src/main.rs"
bench = false

[[bin]]
name = "scan_only"
path = "src/bin/scan_only.rs"
bench = false
required-features = ["internal-tools"]

[[bin]]
name = "gen_icon"
path = "src/bin/gen_icon.rs"
bench = false
required-features = ["internal-tools"]

[[bin]]
name = "bench_perf"
path = "src/bin/bench_perf.rs"
bench = false
required-features = ["internal-tools"]
